# ecs_roguelike

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
config/: config.yaml
include/: config.hpp  factory.hpp  game.hpp
include/components/: drawable.hpp  geometry.hpp  physics.hpp  player.hpp  to_destroy.hpp  ui.hpp
include/systems/: border_check_system.hpp  cleanup_system.hpp  event_system.hpp  physics_system.hpp  player_control_system.hpp  render_system.hpp
src/: factory.cpp  game.cpp  loader.cpp  main.cpp
src/systems/: border_check_system.cpp  cleanup_system.cpp  event_system.cpp  physics_system.cpp  player_control_system.cpp  render_system.cpp
